# computer-graphics-labs

./: README.md  Skeleton2-5+2-6.cpp  main.cpp  vector.cpp
Animation/lab2.1/mathLab/: main.cpp  mathLab
Animation/lab2.1/vectorLab/: CMakeCache.txt  cmake_install.cmake  vectorLab.cpp
CG1.xcodeproj/: project.pbxproj
CG1.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CG1.xcodeproj/project.xcworkspace/xcuserdata/Petter.xcuserdatad/: UserInterfaceState.xcuserstate
CG1.xcodeproj/xcuserdata/Petter.xcuserdatad/xcschemes/: xcschememanagement.plist
CG1/Supporting Files/: skeleton.cpp
Lab1/Lab1.xcodeproj/: project.pbxproj
Lab1/Lab1.xcodeproj/project.xcworkspace/xcuserdata/Petter.xcuserdatad/: UserInterfaceState.xcuserstate
Lab1/Supporting Files/: skeleton.cpp
Ray1/Lab1/: Info.plist
Ray1/Lab1.xcodeproj/project.xcworkspace/xcuserdata/Petter.xcuserdatad/: UserInterfaceState.xcuserstate
Ray1/Supporting Files/: TestModel.h
Ray2/Lab2.xcodeproj/: project.pbxproj
Ray2/Lab2/Supporting Files/: SDLauxiliary.h  skeleton.cpp
SDL.framework/Versions/A/: SDL
SDL.framework/Versions/A/_CodeSignature/: CodeResources
lab2/Lab2/Supporting Files/: skeleton.cpp
lab2/lab2.1/mathLab/: main.cpp
lab2/lab2.1/vectorLab/: CMakeLists.txt
lab2/mathLab/: Makefile  Source.cpp  main.cpp  mathLab  myMatrix.h
lab2/vectorLab/: CMakeCache.txt  Makefile  cmake_install.cmake  vector.cpp  vectorLab  vectorLab.cpp  vectorLab.vcxproj
mathLab/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  main.cpp  mathLab  myVector.h  vector.h
(+2 files in other folders)
